--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Reto HTML</title>
 </head>
 <body>
+    <h1>Reto</h1>
     <p>Hola, soy Iván y este es mi primer HTML</p>
     <img src="https://s3.eu-west-3.amazonaws.com/files.thepowermba.com/files/user-portal-files/production/6582acc6ffb3870af64bf0b5__negative_logo" alt="">
+    <p>3030</p>
 </body>
 </html>
